--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-VITE_TIMESTAMP="updated at Tue Mar  7 21:03:23 +04 2023 by Kirilenko"
+VITE_TIMESTAMP="widgets.wbs.host updated at Thu Mar  9 20:33:14 +04 2023 by Kirilenko"
