--- a/package.json
+++ b/package.json
@@ -19,10 +19,12 @@
   "dependencies": {
     "@emotion/react": "^11.9.0",
     "@emotion/styled": "^11.8.1",
+    "compose-function": "^3.0.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
+    "@types/compose-function": "^0.0.30",
     "@originjs/vite-plugin-federation": "^1.2.1",
     "@types/node": "18",
     "@types/react": "^18.0.26",
