feat: add build in dev-mode

--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "lint:styles": "npx stylelint --fix 'src/**/**.{css,style.ts,style.tsx}'",
     "lint:scripts": "eslint --fix 'src/**/**.{ts,tsx}' './.*.cjs' './*.{cjs,ts}'",
     "format": "pnpm lint:styles && pnpm lint:scripts && prettier --write ./*.{json,md} && scripts/postformat.sh",
+    "build:dev": "tsc && vite build --mode development",
+    "preview:dev": "npm run build:dev && vite preview --port 3001 --strictPort",
     "build": "tsc && vite build",
     "preview": "npm run build && vite preview --port 3001 --strictPort"
   },
